[package]
name = "mini_cilium-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
mini_cilium-common = { path = "../mini_cilium-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.2.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "mini_cilium"
path = "src/main.rs"
