[package]
name = "security_agent-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
security_agent-common = { path = "../security_agent-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "security_agent"
path = "src/main.rs"
