[package]
name = "tc_interceptor-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tc_interceptor-common = { path = "../tc_interceptor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.2.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tc_interceptor"
path = "src/main.rs"
