[package]
name = "xdp_firewall-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp_firewall-common = { path = "../xdp_firewall-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.2.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp_firewall"
path = "src/main.rs"
